--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="error_empty_title">Please give a title</string>
     <string name="option_remove_current_image">Remove current image</string>
     <string name="option_add_new_image">Add new image</string>
+    <string name="save_diary_success">Save diary successfully</string>
+    <string name="general_confirm">Are you sure?</string>
+    <string name="please_confirm">Please confirm</string>
 </resources>
