--- a/todo
+++ b/todo
@@ -1,9 +1,5 @@
-- Màn hình setting
+- Màn hình setting (phase 2)
  - Create backup
  - Restore backup
-- Setting card (phase2)
- - Color
- - photo from template
- - Photo from gallery
-
-- Optimize scroll card - cho phep select month year
+// Optimize scroll card - cho phep select month year
+// Light toobar
