Add folder picker for exporting - export DB to json file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@ From Deira’s souks to its historical streets, and the Arabian desert’s immen
     <string name="design_your_card">Design your card</string>
     <string name="from_photo">From photo</string>
     <string name="from_color">From color</string>
+    <string name="data_exported">Data exported</string>
 </resources>
